# helix-jupyter

./: .gitignore  CLAUDE.md  Cargo.toml  FOLDING.md  LATEX.md  NOTEBOOK.md  README.md  REPL.md  SPELL.md  STYLE.md  base16_theme.toml  languages.toml  theme.toml
book/src/: editor.md  keymap.md
helix-core/src/: doc_formatter.rs  movement.rs  text_annotations.rs
helix-core/src/doc_formatter/: test.rs
helix-jupyter/: Cargo.toml
helix-jupyter/examples/: spike.rs
helix-jupyter/src/: client.rs  lib.rs  messages.rs  registry.rs
helix-loader/src/: lib.rs
helix-spell-lsp/: Cargo.toml  build.rs
helix-spell-lsp/src/: backend.rs  config.rs  dictionary.rs  extract.rs  main.rs  position.rs
helix-style-lsp/: Cargo.toml
helix-style-lsp/src/: backend.rs  config.rs  llm.rs  main.rs  position.rs  prompt.rs
helix-term/: Cargo.toml
helix-term/src/: application.rs  commands.rs  handlers.rs
helix-term/src/commands/: jupyter.rs  typed.rs
helix-term/src/handlers/: folds.rs
helix-term/src/keymap/: default.rs
helix-term/src/ui/: document.rs  editor.rs  spinner.rs  statusline.rs  text_decorations.rs
helix-term/src/ui/text_decorations/: jupyter.rs  kitty.rs
helix-term/tests/: integration.rs
helix-term/tests/test/: jupyter.rs
helix-tui/src/backend/: mod.rs  termina.rs
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs  gutter.rs  handlers.rs  jupyter.rs  lib.rs  notebook.rs  view.rs
helix-view/src/handlers/: jupyter.rs
runtime/queries/latex/: textobjects.scm
